1.6.13: 
 * Fixed a Chrome/Safari bug in which popups such as those for export and
   color were not positioned correctly if the page was scrolled past the top.
 * Fixed a bug in which certain popups on the left and right side of the page
   scrolled along with the page instead of staying fixed in place.

1.6.12: May 19, 2009
 * Added a toolbar color button for setting text and background colors.
 * Added a "start a new discussion" link to each discussion forum page.
 * Updated Luminotes Server INSTALL file with instructions for setting the
   http_url configuration setting.
 * You can now middle click on a link within a note to open it in a new
   browser window or tab.
 * Fixed a bug in Luminotes Desktop in which a backslash within a note was
   duplicated each time the note was saved.
 * Fixed a bug in which right clicking on a note did not always open the web
   browser's context menu.
 * Fixed a bug in which special characters in a customer's name prevented
   PayPal payments from going through properly.

1.6.11: April 28, 2009
 * Rewrote the way that the toolbar is implemented, laying the groundwork for
   themes in a subsequent release.
 * Changed some of the "+" buttons to be more descriptive: "+ notebook" and
   "+ note link".
 * Moved search field up above "notes" heading.
 * Fixed a bug in which toolbar buttons didn't depress based on the current
   location of the text cursor.
 * Fixed a bug in which discussion forum bylines ("Posted by...") were
   sometimes duplicated several times on a given post. Now bylines are
   displayed below each post rather than within it.
 * Fixed a Firefox bug in which removing some bold text and then typing new
   text would make the new text bold. Now, if you completely remove some bold
   text (rather than just a portion of it), any new text that you type will be
   unformatted.
 * Fixed a Firefox bug in which copying and pasting text between notes
   inserted line breaks in the pasted text.

1.6.10: March 20, 2009