@@ -862,6 +862,7 @@ h1 {
   border: none;
   border-collapse: collapse;
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 #color_table td {
@@ -896,6 +897,12 @@ h1 {
 
 .color_box_light_selected {
   color: #000000;
+}
+
+.color_preview_text {
+  text-align: center;
+  margin-right: 1em;
+  padding: 0.25em 1.5em 0.25em 1.5em;
 }
 
 .selected_mark {
